4.7.0 (unreleased)
------------------
  * Add command line option -b for sending pipeglade to background.
  * Add command line option -l for logging duration of pipeglade
  command execution.
  * Add command line option -O for redirecting stderr.
  * Reject commands with excess arguments.
  * Support temporary blocking of feedback messages.
  * GtkDialog and GtkFileChooserDialog now respond to the commands
  that work for GtkWindow.
  * Toplevel windows report 'name:closed' when closed by the window
  manager.
  * GtkStatusbar commands take non-whitespace strings as context id,
  not just integers.
  * Add missing GtkStatusbar command remove_all_id.
  * Support saving snapshots of widgets into image files (eps, ps,
  pdf, svg).
  * Support coordinate transformation in GtkDrawingArea.
  * New ability for GtkDrawingArea commands to insert themselves at
  arbitrary positions in the current list of drawing operations, not
  just at the end.
  * Remove GtkDrawingArea command refresh; refreshing happens
  automatically.
  * Add GtkDrawingArea command set_font_face.
  * Add GtkDrawingArea command rel_move_for supporting text placement
  with respect to center, upper left corner, etc., of the text.
  * Add GtkScale and GtkSpinButton commands set_range, set_increments,
  and (GtkScale only) set_fill_level.
  * Command execution time improved by a factor of about 20.
  * Avoid silly precision on mouse coordinates emitted from GtkEventBox.
  * Floating point format in commands and messages is now independent
  of the current locale.

4.6.0 (2016-03-27)
------------------
  * Make sure fifos are set to mode 0600 before being used.
  * Add support for creating tooltips.
  * Add support for GtkEventBox which reports keyboard and pointer
    device activity.
  * Add support for widgets grabbing focus.

4.5.0 (2016-03-25)
------------------
  * Add GtkStatusbar commands that take a context id argument.
  * Add support for changing widget size.