@@ -141,8 +141,9 @@ Displays the graphical user interface
 which should be created using the
 .Xr glade 1
 user interface designer and saved in GtkBuilder (.ui) format.
-Widget ids should be alphanumeric, including underscores, and the
-main window must must be given the id
+Widget ids should consist of alphanumeric ASCII characters including
+hyphens and underscores.
+The main window must must be given the id
 .Cm main .
 .Pp
 Default is
